--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hi, I am Brianna Hooper.</title>
+		<title> Brianna Hooper SOC Portfolio.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Aspiring SOC Analyst </h1>
+								<h1>Hi, I'm Brianna Hooper </h1>
+<h2>Aspiring SOC Analyst</h2>
 								<p>Cybersecurity is a battlefield, and I’m ready to jump in<br />
 								As a SOC Analyst, I’m committed to detecting threats, responding swiftly, and protecting critical systems. Explore my work below to see my skills in action.</p>
 							</div>
@@ -32,7 +33,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro: About Me </a></li>
-								<li><a href="#work">Work/Projects </a></li>
+								<li><a href="#work">Projects </a></li>
 								<li><a href="#about">Resume</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -47,8 +48,13 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Welcome to my SOC portfolio!<br>  I am a passionate and detail-oriented Cybersecurity Analyst with a strong foundation in security operations, threat detection, and incident response. With a CompTIA Security+ certification and hands-on experience in setting up security monitoring tools like Elastic and Kali Linux, I am dedicated to safeguarding organizations from cyber threats.
+
+I thrive in fast-paced environments where analyzing logs, investigating security events, and mitigating risks are crucial to protecting digital assets. My experience includes log analysis, SIEM integration, network defense, and security best practices, allowing me to detect and respond to potential threats efficiently.
+
+This portfolio showcases my skills in real-world SOC workflows, including threat hunting, log correlation, and incident analysis. I am continuously expanding my knowledge and refining my expertise in threat intelligence, digital forensics, and security automation to stay ahead in the ever-evolving cybersecurity landscape.
+
+Let’s connect and discuss how I can contribute to securing your organization’s infrastructure!</p>
 							</article>
 
 						<!-- Work -->
@@ -63,7 +69,22 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>I’m Brianna Hooper, a Cybersecurity Analyst with a strong focus on Security Operations Center (SOC) workflows, threat detection, and risk management. My journey into cybersecurity is fueled by a combination of technical expertise, data analysis, and problem-solving skills, all of which have been shaped by my experience in handling escalations, process optimization, and cybersecurity training.
+
+With a CompTIA Security+ certification and hands-on experience setting up security monitoring environments, I have developed a keen eye for detecting and mitigating cyber threats. My ability to analyze logs, correlate security events, and investigate anomalies makes me a valuable asset in any SOC environment. </p>
+
+<h2 class="major">Why I Excel in SOC Roles:</h2>
+<p>
+🔹 Cybersecurity Training & Practical Experience: My time at Clarusway’s IT program was instrumental in developing my skills in network security, threat intelligence, SIEM tools, and incident response. Through hands-on labs and in-depth training, I gained experience with real-world security scenarios that prepared me for the demands of a SOC role.<br>
+🔹 Data-Driven Security Approach: In my current role, I analyze IQ chatbot feedback and analytics to improve system performance and reduce customer issues. This experience in working with data translates seamlessly into threat intelligence, log analysis, and anomaly detection—key skills for a SOC analyst.<br>
+🔹 Escalation & Incident Management: As an Advanced Associate, I handle complex inquiries and escalations, requiring me to analyze issues, identify root causes, and implement proactive solutions—the same mindset needed to investigate and respond to security incidents.<br>
+🔹 Proactive Problem-Solving: A key part of my role involves brainstorming ways to reduce customer inquiries, complaints, and contact volume by implementing effective solutions. This process-oriented thinking helps me approach cybersecurity challenges with strategic mitigation plans and continuous improvement methodologies.<br>
+🔹 Leadership & Cross-Functional Collaboration: While not a formal managerial role, my position involves leading initiatives, optimizing workflows, and improving user experience—skills that are crucial for working within SOC teams and collaborating with IT security, compliance, and engineering teams.<br>
+🔹 Adaptability & Continuous Learning: Cyber threats evolve constantly, and I thrive on staying ahead of them. Whether it’s through setting up home labs with Elastic and Kali Linux, refining detection strategies, or studying fraud detection and risk management, I am always growing my technical skills.<br>
+
+I am passionate about cyber defense, security automation, and proactive threat hunting, and I am eager to apply my expertise to protect organizations from evolving cyber risks. Whether it’s monitoring network traffic, responding to security incidents, or refining detection capabilities, I bring a unique blend of technical, analytical, and problem-solving skills that make me an effective SOC analyst. <hr>
+<br>
+Let’s connect and discuss how I can help strengthen your security operations!</p>
 							</article>
 
 						<!-- Contact -->
@@ -343,7 +364,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright"></a>.</p>
 					</footer>
 
 			</div>
